--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,9 @@ body {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   background-color: #ff6347;
 }
+
+img {
+  max-width: 30rem;
+  max-height: 30rem;
+  margin: 1rem;
+}
